test/conformance/kuttl/validate/clusterpolicy/standard/variables/lazyload/conditions/01-manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: preconditions
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: test
      match:
        any:
        - resources:
            kinds:
              - Pod
      context:
        - name: nothere
          apiCall:
            urlPath: /api/v1/namespaces/missing/configmaps/nothere
      preconditions:
        any:
        - key: "{{ request.name }}"
          operator: Equals
          value: test
          message: this pod is not allowed
        - key: "{{ nothere }}"
          operator: Equals
          value: hello
          message: value mismatch
      validate:
        pattern:
          metadata:
            name: "*"
