test/conformance/kuttl/validate/clusterpolicy/standard/variables/lazyload/conditions/02-test.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - file: pod-good.yaml
    shouldFail: false
  - file: pod-bad.yaml
    shouldFail: true
