test/conformance/kuttl/validate/clusterpolicy/standard/variables/lazyload/conditions/03-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: v1
  kind: Pod
  name: test
