test/conformance/kuttl/validate/clusterpolicy/standard/variables/lazyload/conditions/04-test.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - file: pod-good.yaml
    shouldFail: true
  - file: pod-bad.yaml
    shouldFail: false
