test/conformance/kuttl/validate/clusterpolicy/standard/variables/lazyload/conditions/02-assert.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: preconditions
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
